--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/global.css">
+  <link rel="stylesheet" href="style.css">
   <script src="./js/global.js" defer></script>
 
 </head>
@@ -879,7 +879,7 @@
     <div class="container">
       <div class="grid">
         <div class="grid__item">
-          <p>Johm Doe</p>
+          <p>BY RomainDEV</p>
         </div>
         <div class="grid__item">
           <ul class="socials list-unstyled">
@@ -930,7 +930,7 @@
           </ul>
         </div>
         <div class="grid__item">
-          <p>Copyright © 2021 nomdusite. All Rights Reserved.</p>
+          <p>Copyright © 2021 nomdusite.  Tous droits réservés.</p>
         </div>
       </div>
     </div>
